deployments/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio
spec:
  ports:
  - name: api
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: console
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: minio
  type: ClusterIP
