deployments/minio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: minio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - minio.erpf.de
        - console.minio.erpf.de
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: "SIMPLE"
        credentialName: minio-tls
      hosts:
        - minio.erpf.de
        - console.minio.erpf.de
