deployments/minio/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio-console
spec:
  hosts:
    - console.minio.erpf.de
  gateways:
    - minio
  http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          port:
            number: 9090
          host: minio

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio
spec:
  hosts:
    - minio.erpf.de
  gateways:
    - minio
  http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          port:
            number: 9000
          host: minio
